--- a/intro.tex
+++ b/intro.tex
@@ -94,16 +94,16 @@ For instance, with this assumption, the vehicle will not be able to achieve it's
 
 To alleviate this issue, we employ a semi-centralized hierarchical synthesis approach.
 At the \textbf{top level} of the hierarchical approach, we ignore the disturbances, and treat the crane and the vehicle as one joint system, called the \emph{product system}.
-Next, we use the tool ALTRO to obtain a \emph{global} open-loop controller for the product system.
+Next, we use a \emph{planner} to obtain a \emph{global} open-loop controller for the product system.
 (An open-loop controller is one that bases its control decision on the current time instant.)
-ALTRO is a scalable and fast controller synthesis tool that is suitable for the possibly high dimension of the product system.
+Our choice for planning is a tool called ALTRO. ALTRO is a scalable and fast controller synthesis tool that is suitable for the possibly high dimension of the product system.
 
 Since the obtained controller is open-loop, hence we can easily decompose the central controller into individual open-loop controllers---called \emph{local} open-loop controllers---for the crane and the vehicle.
 However, there will be no guarantee that the local open-loop controllers will fulfill the specification when the disturbances come into effect.
 Actually, Fig.~\ref{fig:cr_and_lft} shows various moments in the simulation of the local open-loop controllers in the presence of the disturbances, and Frame~3 shows that the crane and vehicle violate the constraint of the minimum safe distance.
 
-To deal with this robustness issue, at the \textbf{bottom level} of our hierarchical approach, we employ ABCD to ``robustify'' the local open-loop controllers against disturbances.
-More concretely, we consider the open-loop controlled trajectory of \emph{each system in isolation}, and use ABCD to synthesize a \emph{tracking controller}.
+To deal with this robustness issue, at the \textbf{bottom level} of our hierarchical approach, we employ a \emph{guaranteed tracking method} to ``robustify'' the local open-loop controllers against disturbances.
+Our choice to achieve guaranteed tracking is ABCD. More concretely, we consider the open-loop controlled trajectory of \emph{each system in isolation}, and use ABCD to synthesize a \emph{tracking controller}.
 The goal of the tracking controller is to track the open-loop trajectories within some small neighborhood, even in the presence of worst-case disturbances.
 ABCD gives us the sought \emph{local feedback controller} for each individual system.
 
