--- a/experiments.tex
+++ b/experiments.tex
@@ -22,15 +22,15 @@ We consider two distinct types of problems, and demonstrate how they can be solv
 	\renewcommand{\arraystretch}{1.2}
 	\setlength{\tabcolsep}{0.7em} % for the horizontal padding
 	\resizebox{1\columnwidth}{!}{
-		\begin{tabular}{l|c|cc|cc}
+		\begin{tabular}{l|c|ccc|ccc}
 			\toprule
 			Case-studies&\multicolumn{1}{c}{Global planning}&
-			\multicolumn{2}{|c}{Local ABCD}&\multicolumn{2}{|c}{Global ABCD}\\
+			\multicolumn{3}{|c}{Local ABCD}&\multicolumn{3}{|c}{Global ABCD}\\
 			
-			&$T_{AL}$&$T_{l}^{abs}$&$T_{l}^{syn}$&$T_g^{abs}$&$T_g^{syn}$\\
+			&$T_{AL}$&$|Domain|$&$T_{l}^{abs}$&$T_{l}^{syn}$&$T_g^{abs}$&$T_g^{syn}$\\
 			\midrule
 			
-			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $91.0$  & $9.22$&OM&OM \\
+			\multirow{1}{*}{\rotatebox{0}{Multi-drone path planning}} & $125$ & $4\times 10^5$ & $91.0$  & $9.22$& $7.14\times 10^70$&OM&OM \\
 			
 			\midrule
 			
@@ -115,7 +115,9 @@ in $125$ seconds for the product space with $30$ state and $20$ input variables.
  
  We want to robustify the nominal controller against disturbances with $|W|\leq \begin{bmatrix}0&0.025&0.025\end{bmatrix}^T$. We consider state and input spaces to be $X=[-1,11]^2\times[-2,3.3]$ and
 $U=[-2.4,2.4]^2$, respectively. Choosing state and input partition sizes $\eta_{X}=\begin{bmatrix}0.02&0.02&0.02\end{bmatrix}^T$ and
-$\eta_{U}=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$ results in $\hat X$ and $\hat U$ with $9.61\times 10^7$ and $289$ points. We compute the transition system over the inter-tube space characterized by $\varepsilon=\begin{bmatrix}0.16&0.16&0.18\end{bmatrix}^T$, which results in finite-state transition system with $|\hat P|=4.0\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $910$ seconds ($91.0$ seconds in average) and synthesis in $92.2$ seconds ($9.22$ seconds in average). Figure~\ref{fig:3dtubes} gives time-space illustration for the safe tubes around the nominal trajectories for three of the drones (the ones with red dashed circles around them in Fig~\ref{fig:MA}). Fig~\ref{fig:blowup} illustrates the fact that increasing number of agents ($N$) causes an exponential blow-up in the number of transitions if we wanted to solve the given reach-avoid problem over the product state and input spaces. However, since we compute tracking controllers locally, our method experiences linear blow-up when $N$ increases.
+$\eta_{U}=\begin{bmatrix}0.3&0.3\end{bmatrix}^T$ results in $\hat X$ and $\hat U$ with $9.61\times 10^7$ and $289$ points. We compute the transition system over the inter-tube space characterized by $\varepsilon=\begin{bmatrix}0.16&0.16&0.18\end{bmatrix}^T$, which results in finite-state transition system with $|\hat P|=4.0\times 10^5$ points. Given the above settings, SCOTS computes abstraction in $910$ seconds ($91.0$ seconds in average) and synthesis in $92.2$ seconds ($9.22$ seconds in average). Figure~\ref{fig:3dtubes} gives time-space illustration for the safe tubes around the nominal trajectories for three of the drones. %(the ones with red dashed circles around them in Fig~\ref{fig:MA}). 
+It can be noticed that success in restricting the trajectories generated under the worst-case disturbance within the tubes guarantees a collision-free mission.
+Fig~\ref{fig:blowup} illustrates the fact that increasing number of agents ($N$) causes an exponential blow-up in the number of transitions if we wanted to solve the given reach-avoid problem over the product state and input spaces. However, since we compute tracking controllers locally, our method experiences linear blow-up when $N$ increases.
 
 By allowing disturbance to take non-zero values, there is no guarantee that the open-loop trajectory is followed and minimum distances are kept above the design thresholds. Fig.~\ref{fig:multi_drone_distance} illustrates performance of open-loop and feedback controllers on regulating distance between the first and second drones with and without disturbance. As expected, in the absence of disturbance open-loop controller suffices and distance between the two drones (shown in solid blue) does not go below the threshold line $\delta=0.28$. Next, we consider the case when constant additive disturbance vectors $\begin{bmatrix}0 &0.025&0.025\end{bmatrix}^T$ and $\begin{bmatrix}0 &-0.025&-0.025\end{bmatrix}^T$ are being applied to the first and second drones throughout the whole horizon. It can be noticed that applying the open-loop controller causes that distance between the two drones (shown in solid green) becomes smaller than $\delta$. However, the feedback controller is still capable of maintaining distance above the given threshold (shown in solid red).
 \begin{figure}[t]
