--- a/prelims.tex
+++ b/prelims.tex
@@ -20,7 +20,7 @@ Formally, \[\ball_\varepsilon(c)\coloneqq \set{x
 	\in \mathbb{R}^n \mid  |x-c|\leq \varepsilon }.\] 
 
 Let $A$ be a set.
-We use the notation $A^\infty$ to denote the set of all finite and infinite sequences formed using the members of $A$. Finally, to define our control tasks, we use a subset of Linear Temporal Logic (LTL). In particular, we will use the until ($\mathcal{U}$) and next  ($\bigcirc$) operators. Let $p$ and $q$ be predicates, and $\rho=(x_0,x_1,\dots)$ be an infinite sequence of elements from $\reals^n$. We say that $\rho$ satisfies $\bigcirc p$ if $x_1\models p$ and we say $p\mathcal{U}q$ if there exists $i\in\mathbb{N}$ s.t. $x_i\models q$ and for all $0\leq i<k$, $x_k\models p$. For detailed syntax and semantics of LTL, we refer to \cite{baier2008principles} and references therein.
+We use the notation $A^\infty$ to denote the set of all finite and infinite sequences formed using the members of $A$. Finally, to define our control tasks, we use a subset of Linear Temporal Logic (LTL). In particular, we will use the until ($\mathcal{U}$) and next  ($\bigcirc$) operators. Let $p$ and $q$ be predicates, and $\rho=(x_0,x_1,\dots)$ be an infinite sequence of elements from $\reals^n$. We say that $\rho$ satisfies $\bigcirc p$ if $x_1\models p$ and we say $p\mathcal{U}q$ if there exists $i\in\mathbb{N}$ s.t. $x_i\models q$ and for all $0\leq j<i$, $x_j\models p$. For detailed syntax and semantics of LTL, we refer to \cite{baier2008principles} and references therein.
 
 %Let $V$ be a finite set of real-valued variables.
 %We use the notation $\sem{V}$ (same symbol but in boldface blue) to denote the set of every possible valuations of the variables in $V$, i.e.\ an element in $\sem{V}$ assigns an unique real number to every variable in $V$.
@@ -71,7 +71,7 @@ if $|\rho| < \infty$ then $\delta(z_{|\rho|},u)= \emptyset$ for all $u\in U$.
 \smallskip
 \noindent\textbf{Product Control System.}\
 Let $\set{\Sigma^i}_{i\in [1;N]}$, $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$, be a set of $N$ control systems. 
-We assume that all of the control systems within $\set{\Sigma^i}_{i\in [1;N]}$ share an output space $Y\subseteq\reals^p$ to which there exists a set of projections of the form $h^i\colon X^i\rightarrow Y$. Remember our motivating example, wherein the crane's state space contains the cart's position ($z$), the cart's speed ($\dot z$), the pendulum's angular position ($\theta$) and speed ($\dot \theta$). The state space for the forklift is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. Now, defining $h^1=\begin{bmatrix}z+l\sin(\theta)&y_1+l\cos(\theta)\end{bmatrix}^T$ and $h^2=\begin{bmatrix}z'&y_2\end{bmatrix}^T$, both state spaces can be projected to $Y\subseteq \reals^2$ in which we would like to compute distance.
+We assume that all of the control systems within $\set{\Sigma^i}_{i\in [1;N]}$ share an output space $Y\subseteq\reals^p$ to which there exists a set of projections of the form $h^i\colon X^i\rightarrow Y$. Remember our motivating example, wherein the crane's state space consists of the cart's position ($z$), the cart's speed ($\dot z$), the pendulum's angular position ($\theta$), and angular speed ($\dot \theta$). The state space for the forklift is described with only one state variable $z'$ describing its position. Note that $X^1\subseteq \reals^4$ and $X^2\subseteq \reals$. Now, defining $h^1=\begin{bmatrix}z+l\sin(\theta)&y_1+l\cos(\theta)\end{bmatrix}^T$ and $h^2=\begin{bmatrix}z'&y_2\end{bmatrix}^T$, both state spaces can be projected to $Y\subseteq \reals^2$ in which we would like to compute distance.
 %For example, in a multi-robot scenario, all of the robots move within a two or three dimensional space independent of their individual dynamics.
 We define distance between two control systems as $D\colon X^i\times X^j\rightarrow \reals_{\geq 0}$, $D\colon (u,v)\mapsto\| h^i(u)-h^j(v)\|$. We extend the definition of $D$ to measure distance between a system's state and a set defined over the shared output space: for any given $u\in X^i$ and $V\subseteq X^i$, $D(u,V) \coloneqq \inf_{v\in V}\|u-v\|$. The \emph{product control system of } $\set{\Sigma^i}_{i\in [1;N]}$ is the control system $\Sigma^\times = (X^\times, x_\init^\times, U^\times, \set{0^n}, f^\times, D)$ wherein $X^\times\coloneqq X^1\times \ldots \times X^N$ and we assume that $\sum_{i\in [1;N]} n_i=n$, $x_\init^\times\coloneqq (x_\init^1,\ldots,x_\init^N)$, $U^\times\coloneqq U^1\times\dots\times U^N\subset \reals^m$ and $f^\times\coloneqq f^{1}\otimes \ldots\otimes f^{N}$. 
 We use the state projection operator $\proj^{i}\colon X^\times\to X^i$, $\proj^{i}\colon (x^1,\ldots,x^N)\mapsto x^i$.
